# cs5220_final_project

./: CMakeLists.txt  README.md  baseline  baseline.cpp  check.out  control_bit_table.out  data_generator.py  generate_data.cpp  initial_gpu.cu  job-mpi  main  main.cpp  main.cu  mpi_main.cpp  mpi_openmp_main.cpp  openmp.cpp  optimized_gpu.cu  second_order_version.cpp  serial.cpp  small_output.txt  third_order_version.cpp
cs5220_final_project/: CMakeLists.txt  openmp.cpp
cs5220_final_project/dataset/: small.csv
dataset/: 128SNPs_512samples.csv  256SNPs_1024samples.csv  512SNPs_2048samples.csv  640SNPs_2560samples.csv  64SNPs_256samples.csv  README.md  small.csv
